# Hack109

./: .env.dev  .env.example  .env.prod  .gitignore  GEMINI_SETUP.md  README.md  SMART_FALLBACK_GUIDE.md  SMART_FALLBACK_IMPLEMENTATION.md  main.py  manage.py  pyproject.toml  requirements.txt
GetHired/: asgi.py  settings.py  urls.py  wsgi.py
core/: ai_views.py  api_views.py  apps.py  exceptions.py  gemini_integration.py  logging.py  models.py  openrouter_integration.py  smart_inference.py  urls.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  style.css
governance/: __init__.py  apps.py  models.py
ingestion/: __init__.py  apps.py  models.py  storage.py  urls.py  views.py
ingestion/migrations/: 0001_initial.py  0002_resumeuploadrecord_object_metadata.py  0003_resumeuploadrecord_parsed_json.py  0004_rename_resume_uplo_status_137061_idx_resume_uplo_status_dcf10d_idx_and_more.py
matching/: __init__.py  apps.py  models.py  urls.py  views.py
md/: DEVELOPMENT_STATUS.md  PHASE1_IMPLEMENTATION.md  PHASES_2_5_REQUIRED_IMPLEMENTATIONS.md  SMART_FALLBACK_QUICK_START.md  prd.md  srs.md
privacy/: __init__.py  apps.py  models.py  urls.py  views.py
